Fix Safari squishing images

--- a/source/assets/stylesheets/styles/_event_speaker.scss
+++ b/source/assets/stylesheets/styles/_event_speaker.scss
@@ -32,6 +32,7 @@
 }
 
 .event-speaker__image {
+  @include flex(0, 0, 100px);
   display: block;
   height: 100px;
   margin-right: 20px;
